--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "body-parser": "^2.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3"
   }
 }
