--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,5 +1,6 @@
+PORT=3000
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
-DB_NAME=debora
-PORT=3000
+DB_NAME=service_gate
+JWT_SECRET=meuSuperSegredo123!
