--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,6 +1,9 @@
 PORT=3000
+
 DB_HOST=localhost
-DB_USER=root
-DB_PASS=
+DB_PORT=5432
+DB_USER=postgres
+DB_PASS=1234
 DB_NAME=service_gate
+
 JWT_SECRET=meuSuperSegredo123!
